# poor_client

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
client/: client_network.cpp  client_network.h
client/uploads/: useruploadsmanager.cpp  useruploadsmanager.h
client/user/: user_login_account_manager.cpp  user_login_account_manager.h
data/terminal/: .client_message.txt
data/terminal/home/root/: .bash_history.txt
feature/data/: packet.cpp  packet.h
feature/terminal/: command.cpp  command.h  feature.h
feature/tools/convertor/timestamp/: timestamp.cpp  timestamp.h
feature/tools/encipher/: base64.cpp  md5.cpp  md5.h
overloading/terminal/: plain_text_edit.cpp  plain_text_edit.h  terminaltextedit.cpp  terminaltextedit.h
server/: client_network.cpp  client_network.h
server/uploads/: useruploadsmanager.cpp  useruploadsmanager.h
server/user/: user_manager.cpp  user_manager.h
terminal/: command.cpp  command.h  terminal.cpp  terminal.h  terminal.ui
terminal/module/: terminaltextedit.cpp  terminaltextedit.h
tools/: tools.cpp  tools.h  tools.ui
tools/convertor/: convertor.cpp  convertor.h  convertor.ui
tools/convertor/timestamp/: timestamp.cpp  timestamp_ui.cpp  timestamp_ui.h  timestamp_ui.ui
tools/encipher/: base64.cpp  base64.h  md5.cpp  md5.h
ui/file/: fileuploads.cpp  fileuploads.h  fileuploads.ui
ui/terminal/: terminal.cpp  terminal.h  terminal.ui
ui/tools/: tools.cpp  tools.h  tools.ui
ui/tools/convertor/: convertor.cpp  convertor.h  convertor.ui
ui/tools/convertor/timestamp/: timestamp_ui.cpp  timestamp_ui.h  timestamp_ui.ui
ui/tools/encipher/: base64.cpp  base64.h
ui/user/: user_login_account.cpp  user_login_account.h  user_login_account.ui  user_login_phone.cpp  user_login_phone.h  user_login_phone.ui  user_login_phone_code.cpp  user_login_phone_code.h  user_login_phone_code.ui  user_sign_in.cpp  user_sign_in.h
user/: user_login_account.cpp  user_login_account.h  user_login_account.ui  user_login_phone.cpp  user_login_phone.h  user_login_phone.ui  user_login_phone_code.cpp  user_login_phone_code.h  user_login_phone_code.ui
